--- a/epicodeCorso/Units/BuildWeeks/BuildWeek_2/artist_page.html
+++ b/epicodeCorso/Units/BuildWeeks/BuildWeek_2/artist_page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Album Page Spotify</title>
+    <title>Artist Page Spotify</title>
     <link rel="shortcut icon" href="https://www.freeiconspng.com/uploads/spotify-icon-18.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous" />
@@ -89,120 +89,82 @@
 
             <!-- ----------------------------------------------------------PARTE CENTRALE---------------------------------------------------------- -->
             <div class="col col-12 col-md-9 col-lg-8 p-0" id="middle">
-                <div class="middleAlbumPage">
-                    <!-- <div class="user__Bar user__BarAlbumPage d-flex justify-content-between align-items-center py-2 sticky-top">
-                        <div class="arrow__Btns ms-3">
-                            <button type="button" class="bg-dark text-white border-0 rounded-circle"><i
-                                    class="bi bi-chevron-left"></i></button>
-                            <button type="button" class="bg-dark text-white border-0 rounded-circle"><i
-                                    class="bi bi-chevron-right"></i></button>
-                        </div>
-                        <div class="d-flex justify-content-center me-3 bg-black rounded-5 align-items-center  bg-opacity-50">
-                            <img class="rounded-circle mx-1" src="https://place.dog/60/45" alt="user image">
-                            <p class="text-white m-0">nome dell'utente</p>
-                            <i class="bi bi-caret-down-fill mx-1 text-white"></i>
-                        </div>
-                    </div> -->
-                    <div
-                        class="user__Bar user__BarAlbumPage bg-dark d-flex justify-content-between align-items-center py-2 sticky-top d-none d-sm-flex">
-                        <div class="arrow__Btns ms-3">
-                            <a href="./home_page.html"><button type="button"
-                                    class="bg-dark text-white border-0 rounded-circle"><i
-                                        class="bi bi-chevron-left"></i></button></a>
-                            <button type="button" class="bg-dark text-white border-0 rounded-circle"><i
-                                    class="bi bi-chevron-right"></i></button>
-                        </div>
-
-                        <div class="dropdown d-flex align-items-center me-2">
-                            <button
-                                class="btn btn-sm btn-sm-secondary dropdown-toggle btn-rounded p-3 d-flex align-items-center"
-                                type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                <img src="https://picsum.photos/200" class="rounded-circle me-2 d-none d-md-inline"
-                                    alt="Immagine" style="width: 25px; height: 25px" />
-                                Team 6 Epicode
-                            </button>
-                            <ul class="dropdown-menu dropdown-menu-end">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <a class="dropdown-item" href="#">Something else here</a>
-                                </li>
-                            </ul>
-                        </div>
+                <div
+                    class="user__Bar user__BarAlbumPage bg-dark d-flex justify-content-between align-items-center py-2 sticky-top d-none d-sm-flex">
+                    <div class="arrow__Btns ms-3">
+                        <a href="./home_page.html"><button type="button"
+                                class="bg-dark text-white border-0 rounded-circle"><i
+                                    class="bi bi-chevron-left"></i></button></a>
+                        <button type="button" class="bg-dark text-white border-0 rounded-circle"><i
+                                class="bi bi-chevron-right"></i></button>
                     </div>
 
-                    <!-- ⬇️current album⬇️ -->
-                    <div class="album__body d-flex text-white"><!--
-                        <div><img class="album__img shadow-lg img-fluid" src="https://place.dog/150/160"
-                                alt="foto artista">
-                        </div>
-                        <div class="ms-2 mt-3">
-                            <p class="album__album fw-bolder">Album</p>
-                            <h2 class=" album__name display-2 fw-bolder">Nome Album</h2>
-                            <div class="artist__info d-flex">
-                                <div class="d-flex">
-                                    <img class="rounded-circle mx-1" src="https://place.dog/40/30" alt="user image">
-                                    <p>Nome artista -</p>
-                                    <p class="anno__ril">anno rilascio -</p>
-                                    <p class=" nr__canzoni">nr canzoni , <span class="opacity-50 small"> minuti e
-                                            secondi totali</span>
-                                    </p>
-                                </div>
-                                <p class="album__annoR d-sm-none">Album - <span>anno rilascio</span></p>
-                            </div>
-                        </div>-->
+                    <div class="dropdown d-flex align-items-center me-2">
+                        <button
+                            class="btn btn-sm btn-sm-secondary dropdown-toggle btn-rounded p-3 d-flex align-items-center"
+                            type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <img src="https://picsum.photos/200" class="rounded-circle me-2 d-none d-md-inline"
+                                alt="Immagine" style="width: 25px; height: 25px" />
+                            Team 6 Epicode
+                        </button>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li>
+                                <a class="dropdown-item" href="#">Something else here</a>
+                            </li>
+                        </ul>
                     </div>
-
-                    <!-- ⬇️playlist + upper icons⬇️-->
-                    <div class="container-fluid mt-3">
-                        <div class="row">
-                            <div
-                                class="col-12 col-sm-6 icons__play fs-6 d-flex align-items-center justify-content-between mb-3 ms-2">
-
-                                <div class="d-flex align-items-center">
-                                    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60"
-                                            fill="green" class="bi bi-play-circle-fill" viewBox="0 0 16 16">
-                                            <path
-                                                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z" />
-                                        </svg></a>
-                                    <i class="bi bi-heart mx-2 text-white opacity-75"></i>
-                                    <i class="bi bi-arrow-down-circle mx-2 text-white opacity-75"></i>
-                                    <i class="bi bi-three-dots mx-2 text-white opacity-75 three__dots"></i>
-                                    <i class="bi bi-three-dots-vertical mx-2 text-white opacity-75 d-sm-none"></i>
-                                </div>
-                                <div class="col-sm-6 d-flex align-items-center shuf__play">
-                                    <i class="bi bi-shuffle d-block d-sm-none mx-2 opacity-75"></i>
-                                    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60"
-                                            fill="green" class="bi bi-play-circle-fill d-block d-sm-none"
-                                            viewBox="0 0 16 16">
-                                            <path
-                                                d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z" />
-                                        </svg></a>
+                </div>
+                <div class="container container__cont">
+                    <div class="row flex-column artist__body">
+                        <div class="col d-flex flex-column justify-content-end" id="titoloArtista">
+                        </div>
+                        <div class="col">
+                            <div class="my-4">
+                                <a href="#"><svg xmlns="http://www.w3.org/2000/svg" width="60" height="60" fill="green"
+                                        class="bi bi-play-circle-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.79 5.093A.5.5 0 0 0 6 5.5v5a.5.5 0 0 0 .79.407l3.5-2.5a.5.5 0 0 0 0-.814l-3.5-2.5z" />
+                                    </svg></a>
+                                <p class="border d-inline py-2 px-3 mx-4">FOLLOWING</p>
+                                <div class="btn-group">
+                                    <button class="bg-transparent border-0" type="button" data-bs-toggle="dropdown"
+                                        aria-expanded="true">
+                                        <span class="menu_pulsanti">&middot;&middot;&middot;</span>
+                                    </button>
+                                    <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="#">Action</a></li>
+                                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                                        <li>
+                                            <a class="dropdown-item" href="#">Something else here</a>
+                                        </li>
+                                    </ul>
                                 </div>
                             </div>
-                            <div class="container div__container mt-1">
-                                <div class="row mb-3">
-                                    <div
-                                        class="col-12 d-flex justify-content-between border-bottom border-2 border-white border-opacity-25 text-white opacity-75 small pl-0">
-                                        <div class="col-2">
-                                            <p class="song__title">#</p>
-                                        </div>
-                                        <div class="col-6">
-                                            <p class="song__title">Titolo</p>
-                                        </div>
-                                        <div class="song__ripro col-3 ">
-                                            <p>Riproduzioni</p>
-                                        </div>
-                                        <div class="col-1 text-center">
-                                            <i class="bi bi-clock"></i>
-                                        </div>
-                                    </div>
+                            <div class="row">
 
-                                    <ol id="allSongs">
+                                <div class="col-12 col-lg-8">
+                                    <h3 class="mb-4">Popolari</h3>
+                                    <ol id="listaCanzoni">
 
                                     </ol>
+                                    <p class="my-4"><strong>VISUALIZZA ALTRO</strong></p>
+
+                                </div>
+
+
+                                <div class="col-12 col-lg-4">
+                                    <h3 class="mb-4 fs-5">Brani che ti piacciono</h3>
+                                    <div class="row mb-4" id="likeArtista">
+
+                                    </div>
                                 </div>
                             </div>
+                        </div>
+                        <h3>Scopri la discografia dell'artista</h3>
+                        <div class="row" id="listaAlbum">
+
                         </div>
                     </div>
                 </div>
@@ -250,7 +212,7 @@
             </div>
         </div>
     </div>
-
+    <button onclick=""></button>
     <!-- ----------------------------------------------------------PLAYER---------------------------------------------------------- -->
     <footer>
         <!-- player bar schermi grandi-->
@@ -260,8 +222,8 @@
                     id="titoloFooter1">
                     <!-- <img src="http://placekitten.com/50/50" alt="Album Cover" class="me-3">
                     <div>
-                        <h6 class="mb-0">Titolo della canzone</h6>
-                        <p class="mb-0 small">Nome dell'artista</p>
+                        <h6 class="mb-0" id="titoloFooter1"></h6>
+                        <p class="mb-0 small" id="artistaFooter1">Nome dell'artista</p>
                     </div>
                     <div>
                         <i class="bi bi-heart fs-5 ps-4"></i>
@@ -271,14 +233,14 @@
                     <div>
                         <i class="bi bi-shuffle fs-4 px-2"></i>
                         <i class="bi bi-skip-backward fs-4  px-2"></i>
-                        <i class="bi bi-play-circle fs-1 px-2" onclick="music.pause()"></i>
+                        <i class="bi bi-play-circle fs-1  px-2" onclick="music.pause()"></i>
                         <i class="bi bi-skip-forward fs-4  px-2"></i>
                         <i class="bi bi-repeat fs-4  px-2"></i>
                     </div>
-
                 </div>
                 <div
                     class="col col-12 col-md-4 d-flex align-items-center justify-content-center justify-content-md-end">
+
                     <div class="volume-bar d-flex justify-content-center align-items-center me-3">
                         <i class="bi bi-volume-up fs-3"></i>
                         <input type="range" min="0" max="100" value="50" id="volume-control">
@@ -314,11 +276,10 @@
             </ul>
         </div>
     </footer>
-
+    <script src="./assets/JS/artistPage.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
-    <script src="./assets/JS/Album_page.js"></script>
 </body>
 
 </html>
